<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FAFAFA"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="95dp"
        android:fontFamily="@font/roboto_bold"
        android:id="@+id/bookWebLogo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_alignParentTop="true"
        android:text="@string/app_name"
        android:textColor="#2D2C2B"
        android:textSize="45sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="-5dp"
        android:layout_below="@+id/bookWebLogo"
        android:id="@+id/descriptionBelowLogo"
        android:textColor="#B0ADA9"

        android:layout_alignStart="@+id/bookWebLogo"
        android:text="@string/activity_login_description"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_below="@id/descriptionBelowLogo"

        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="7dp"

            android:layout_marginLeft="23dp"
            android:layout_alignStart="@+id/descriptionBelowLogo"

            android:layout_above="@id/loginEmailAndPasswordButton"
            android:layout_marginRight="23dp"
            android:id="@+id/Login_registerButton"
            android:background="@drawable/main_button_background"

            android:fontFamily="@font/roboto_bold"
            android:text="@string/activity_login_registerTextPartTwo"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:layout_marginBottom="19dp"
            tools:ignore="ObsoleteLayoutParam,RtlSymmetry" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="-5dp"
            android:layout_below="@+id/bookWebLogo"

            android:textColor="#B0ADA9"

            android:layout_alignStart="@+id/bookWebLogo"
            android:text="@string/Have_Account"
            android:textSize="16sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="7dp"
            android:layout_marginTop="19dp"

            android:layout_marginLeft="23dp"
            android:layout_alignStart="@+id/descriptionBelowLogo"

            android:layout_above="@id/loginGoogleButton"
            android:layout_marginRight="23dp"
            android:id="@+id/loginEmailAndPasswordButton"
            android:background="@drawable/main_button_background"

            android:fontFamily="@font/roboto_bold"
            android:text="@string/activity_login_choiceLogin_loginEmail"
            android:textAllCaps="false"
            android:textColor="#fff"
            tools:ignore="ObsoleteLayoutParam,RtlSymmetry" />

        <FrameLayout
            style="?android:attr/buttonStyle"
            android:id="@+id/loginGoogleButton"
            android:background="@drawable/google_background"
            android:layout_width="match_parent"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="23dp"
            android:gravity="center_horizontal|center"

            android:drawableStart="@drawable/google_icon"
            android:layout_height="wrap_content" >

            <TextView
                android:drawablePadding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:layout_marginStart="-9.3dp"
                android:background="@drawable/google_background"
                android:drawableStart="@drawable/google_icon"
                android:gravity="left|center_vertical"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/activity_login_choiceLogin_loginGoogle"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>


        <FrameLayout
            style="?android:attr/buttonStyle"

            android:background="@drawable/facebook_background"
            android:layout_width="match_parent"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="23dp"
            android:id="@+id/loginFacebookButton"
            android:gravity="center_horizontal|center"

            android:drawableStart="@drawable/google_icon"
            android:layout_height="wrap_content" >
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"

                android:layout_height="180dp"
                android:layout_width="match_parent"
                android:scaleY="1"
                android:visibility="gone"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="23dp"
                android:layout_gravity="center_horizontal"

                android:layout_marginBottom="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:drawablePadding="5dp"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:background="@drawable/facebook_background"
                android:drawableStart="@drawable/facebook_icon"
                android:gravity="left|center_vertical"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/activity_login_choiceLogin_loginFacebook"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>



    </LinearLayout>




</RelativeLayout>