<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".ui.bookShow.VotedBook">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/VotedBook_youMark"
        android:textAlignment="center"
        android:id="@+id/VotedBook_yourMarkText"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_below="@+id/VotedBook_yourMarkText"

        android:textSize="70sp"
        android:text="8"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:id="@+id/VotedBook_markBook"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/gray_theme"

        android:inputType="textMultiLine|none|textNoSuggestions"
        android:layout_below="@+id/VotedBook_markBook"
        android:id="@+id/VotedBook_opinionAboutBook"
        android:hint="Super książka "
        android:textColor="#000"
        android:textAlignment="center"
        android:layout_height="160dp" />

    <Button
        android:layout_width="match_parent"
        android:background="@drawable/main_button_background"
        android:layout_below="@id/VotedBook_opinionAboutBook"
        android:layout_marginTop="16dp"
        android:id="@+id/zmienOcene"
        android:text="@string/VotedBook_changeMark"
        android:textColor="#fff"
        android:textAllCaps="false"

        android:textSize="22sp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:background="@drawable/main_button_background"
        android:layout_below="@id/zmienOcene"
        android:layout_marginTop="16dp"
        android:id="@+id/VotedBook_removeMark"
        android:text="@string/remove_mark"
        android:textColor="#fff"
        android:textAllCaps="false"

        android:textSize="22sp"
        android:layout_height="wrap_content" />

</RelativeLayout>