<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/layoutLoginEmail"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/topLayoutLoginEmail"
            android:paddingBottom="15dp"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="95dp"
                android:id="@+id/loginEmailLogo"
                android:layout_alignParentStart="true"
                android:layout_marginStart="23dp"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/roboto_bold"



                android:text="@string/app_name"
                android:textColor="#2D2C2B"
                android:textSize="45sp">

            </TextView>

            <TextView
                android:id="@+id/LoginEmail_Description"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_below="@+id/loginEmailLogo"
                android:layout_alignStart="@+id/loginEmailLogo"


                android:layout_marginTop="-5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/activity_loginEmail_description"
                android:textSize="16sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/roboto_bold"
                android:layout_alignStart="@+id/loginEmailLogo"
                android:layout_below="@+id/LoginEmail_Description"

                android:text="@string/activity_loginEmail_emailDescription"
                android:textColor="#2D2C2B"
                android:id="@+id/WritePassword_NewPasswordDescription"
                android:layout_marginTop="45dp"
                android:textSize="16sp" />

<FrameLayout
    android:layout_width="match_parent"
    android:layout_alignStart="@+id/loginEmailLogo"
    android:layout_below="@+id/WritePassword_NewPasswordDescription"
    android:id="@+id/inputEmailFrame"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="20dp"
    android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputLoginOrEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"



                android:background="@drawable/input_background"
                android:fontFamily="@font/roboto_bold"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#000"
                android:inputType="textEmailAddress"
                tools:ignore="Autofill,LabelFor,TextFields" />
    <EditText
        android:id="@+id/inputLoginOrEmailRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"



        android:background="@drawable/red_input_background"
        android:fontFamily="@font/roboto_bold"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#000"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill,LabelFor,TextFields" />

</FrameLayout>

            <ImageView
                android:id="@+id/backToChoiceLoginMethod"
                android:layout_width="70dp"
                android:paddingTop="18dp"
                android:layout_marginEnd="-22dp"
                android:paddingBottom="27dp"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="1dp"
                android:layout_alignEnd="@+id/inputEmailFrame"
                android:layout_alignTop="@+id/loginEmailLogo"
                android:src="@drawable/arrow_left"
                android:contentDescription="@string/activity_loginEmail_ArrowBackDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#2D2C2B"
                android:layout_below="@+id/inputEmailFrame"
                android:layout_marginTop="10dp"
                android:layout_alignStart="@+id/inputEmailFrame"
                android:fontFamily="@font/roboto_bold"
                android:id="@+id/WritePassword_RepeatNewPasswordDescription"

                android:text="@string/activity_loginEmail_passwordDescription"
                android:textSize="16sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_alignStart="@+id/inputEmailFrame"
                android:id="@+id/WritePassword_InputRepeatNewPasswordLayout"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@+id/WritePassword_RepeatNewPasswordDescription"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:id="@+id/WritePassword_InputNewRepeatPassword"

                android:maxLines="1"

                android:singleLine="true"
                android:maxLength="30"
                android:background="@drawable/input_background"
                android:inputType="textPassword"
                android:fontFamily="@font/roboto_bold"
                android:textAllCaps="false"
                android:textAlignment="textStart"

                android:paddingLeft="15dp"
                android:imeOptions="actionSearch"
                android:paddingRight="15dp"
                android:textColor="#000"
                tools:ignore="Autofill,LabelFor" />

            <ImageButton
                android:id="@+id/WritePassword_InputRepeatNewPasswordImage"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_alignEnd="@+id/WritePassword_InputNewRepeatPassword"
                android:src="@drawable/hide_password"
                android:layout_alignTop="@+id/WritePassword_InputNewRepeatPassword"
                android:background="@null"
                android:layout_centerVertical="true"
                android:contentDescription="@string/General_showPasswordButton" />


                    <EditText
                        android:id="@+id/WritePassword_InputRepeatNewPasswordRed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"



                        android:background="@drawable/red_input_background"
                        android:fontFamily="@font/roboto_bold"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:singleLine="true"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="#000"
                        android:inputType="textEmailAddress"
                        tools:ignore="Autofill,LabelFor,TextFields" />


                </RelativeLayout>
            </FrameLayout>
            <TextView
                android:id="@+id/WritePassword_infoMessage"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_alignEnd="@+id/WritePassword_InputRepeatNewPasswordLayout"

                android:layout_height="wrap_content"
                android:layout_below="@+id/WritePassword_InputRepeatNewPasswordLayout"
                android:layout_alignStart="@+id/loginEmailLogo"

                android:textColor="#FF523A"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/activity_loginEmail_description"
                android:textSize="16sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignStart="@+id/inputEmailFrame"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/WritePassword_SetNewPassword"
                android:background="@drawable/main_button_background"
                android:layout_below="@+id/WritePassword_infoMessage"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/activity_loginEmail_login"
                android:textAllCaps="false"
                android:textColor="#fff"
                tools:ignore="HardcodedText" />
        </RelativeLayout>
    </ScrollView>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/LoginEmail_Register"
        android:gravity="center"
        android:id="@+id/LoginEmail_restorePassword"
        android:orientation="horizontal">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_gravity="center"


            android:fontFamily="@font/roboto_bold"
            android:textColor="#B0ADA9"
            android:text="@string/activity_login_forgotPassword"
            android:textSize="16sp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/LoginEmail_Register"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"

            android:fontFamily="@font/roboto_bold"
            android:textColor="#B0ADA9"
            android:text="@string/activity_login_registerTextPartOne"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center"

            android:layout_marginStart="7dp"
            android:fontFamily="@font/roboto_bold"

            android:text="@string/activity_login_registerTextPartTwo"


            android:textColor="#F89D13"
            android:textSize="16sp" />


    </LinearLayout>


</RelativeLayout>

